samples/_failures_safe/1761254158_95ab39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16ed522b.c: In function ‘main’:
./samples/SAFE/__tmp_16ed522b.c:177:5: error: expected declaration or statement at end of input
  177 |     }
      |     ^
